--- a/pom.xml
+++ b/pom.xml
@@ -83,8 +83,14 @@
             <version>5.11.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.17.2</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
